[package]
name = "raytracing-rust"
version = "0.1.0"
authors = ["Matteo Meli <matteo.meli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "raytracer"
path = "src/lib.rs"

[[bin]]
name = "raytracer"
path = "src/main.rs"

[dependencies]
rand = "0.7.2"
